# lambda_function

./: .env_example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  commintlint.config.js  docker-compose.yaml  pyproject.toml  requirements.txt
events/: event.json
scripts/: init_db.py
src/galeo_lambda/: app.py  container.py  data_loaders.py  data_processors.py  factories.py
