[tool.poetry]
name = "galeo-lambda"
version = "0.1.0"
description = "Galeo lambda function challenge"
authors = ["Andres Plazas <apr@certainly.com>"]
readme = "README.md"
packages = [{include = "galeo_lambda", from="src" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
